Cleanup, splitting the one 1000-line .c file into several files, with headers and stuff.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,7 +9,7 @@ project(EtherCAT-IPdaemon C)
 
 add_subdirectory(SOEM)
 
-set(SOURCES src/daemon.c)
+set(SOURCES src/EtherCatDaemon.c src/ecatDriver.c src/networkServer.c)
 add_executable(daemon ${SOURCES})
 target_link_libraries(daemon soem)
 #install(TARGETS daemon DESTINATION bin)
