--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "SOEM"]
 	path = SOEM
-	url = git@github.com:OpenEtherCATsociety/SOEM.git
+	url = https://github.com/OpenEtherCATsociety/SOEM.git
