--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,5 +21,8 @@ if(EXISTS ${CMAKE_CURRENT_BINARY_DIR}/config.txt)
   message("NOTE: config.txt already copied, do not overwrite!")
   message("")
 else()
+  message("")
+  message("NOTE: config.txt was copied from the source folder")
+  message("")
   file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/config.txt DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
 endif()
